[gd_scene load_steps=3 format=2]

[ext_resource path="res://TimeTrial.gd" type="Script" id=1]
[ext_resource path="res://PlayerHUD.tscn" type="PackedScene" id=2]

[node name="TimeTrial" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1_Container" type="Node2D" parent="."]

[node name="Player1" type="Sprite" parent="Player1_Container"]
centered = false
flip_v = true

[node name="PlayerHUD" parent="Player1_Container" instance=ExtResource( 2 )]
